# avcontrol-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.sh  build_images.sh
src/: lirc.rs  main.rs  serial.rs
