[package]
name = "avcontrol-rs"
version = "0.1.0"
authors = ["Hugh Cole-Baker <sigmaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log_to_syslog = ["syslog"]

[dependencies]
env_logger = "0.8"
log = "0.4"
futures = "0.3"
mqtt-protocol = { version = "0.8", features = ["async"] }
nix = "0.14"
num_enum = "0.5"
phf = { version = "0.8", features = ["macros"] }
rand = "0.7"
syslog = { version = "5.0", optional = true }
tokio = { version = "0.2", features = ["full"] }
tokio-serial = "4.3.3"
