[package]
name = "avcontrol-rs"
version = "0.1.0"
authors = ["Hugh Cole-Baker <sigmaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log_to_syslog = ["syslog"]

[dependencies]
env_logger = "0.8"
log = "0.4"
futures = "0.3"
mqtt-protocol = { version = "0.11", features = ["tokio"] }
nix = "0.14"
num_enum = "0.5"
phf = { version = "0.8", features = ["macros"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = { version = "5.0", optional = true }
tokio = { version = "1.8", features = ["full"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1"

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update && apt-get --assume-yes install libudev1:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH"
]
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update && apt-get --assume-yes install libudev1:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH"
]
[workspace.metadata.cross.build.env]
passthrough = [
    "RUST_BACKTRACE",
    "PKG_CONFIG_ALLOW_CROSS",
    "PKG_CONFIG_PATH",
]